--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
 
     <section id="saran">
   		<div class="saran-card">
-        <img class="saran"src="Index gambar dan css/Blog 1.jpg" alt="">
+        <a href="Asal-Usul Banyuwangi.html"><img class="saran"src="Index gambar dan css/Blog 1.jpg" alt=""></a>
   			<h1>Asal-usul Kota Banyuwangi</h1>
   			<p>11 September 2019</p>
   		</div>
   		<div class="saran-card">
-        <img class="saran" src="Index gambar dan css/Blog 3.jpg" alt="">
+        <a href="TipsWisata.html"><img class="saran" src="Index gambar dan css/Blog 3.jpg" alt=""></a>
         <h1>7 Tips Liburan Hemat dan Menyenangkan</h1>
   			<p>11 September 2019</p>
   		</div>
       <div class="saran-card">
-        <img class="saran" src="Index gambar dan css/Blog 4.jpg" alt="">
+        <a href="WisataHits.html"><img class="saran" src="Index gambar dan css/Blog 4.jpg" alt=""></a>
         <h1>8 Tempat Wisata Banyuwangi Paling Hits</h1>
         <p>11 September 2019</p>
       </div>
