--- a/TipsWisata.html
+++ b/TipsWisata.html
@@ -1,70 +1,70 @@
-<!doctype html>
-<html>
-<head>
-<title>KOTA OSING - The Sunrise of Java</title>
-<link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
-<link rel="stylesheet" href="Index gambar dan css/style.css">
-</head>
-<body>
-	<div id="header-menu">
-		<img src="Index gambar dan css/Kota Osing-black.png">
-			<ul>
-				<li><a href="index.html#boxgaris">KONTAK</a></li>
-				<li><a href="index.html#artikel">BLOG</a></li>
-				<li><a href="tentang.html">TENTANG</a></li>
-				<li><a href="index.html">BERANDA</a></li>
-			</ul>
-	</div>
-	<div class="headerGambar">
-		<img class="headerBanyuwangi" src="Index gambar dan css/Blog 2.jpg">
-	</div>
-<br>
-<div class="artikel">
-	<h3 class="judulartikel">10 Tips Travelling untuk Mahasiswa</h3>
- 	 <h4 class="keteranganjudul">Oleh Kota Osing Diterbitkan 11 September di Blog</h4>
-	<ol class="TipsWisata">
-   	 <li>Buat perencanaan dengan niat</li>
-		 <p class="TipsWisata">Buat rencana perjalanan kamu dari jauh-jauh hari. Cari tempat mana yang mau kamu datangi, perbekalan apa yang harus kamu bawa, dan sebagainya. Yang terpenting, jika membuat rencana perjalanan dari jauh-jauh hari, kamu bisa menabung biaya perjalanan dari sekarang.</p>
-   	 <li>Manfaatkan semua yang ada</li>
-		 <p class="TipsWisata">Jika punya kenalan atau saudara di tempat tujuan kamu, manfaatkanlah. Daripada menginap di hotel, lebih baik menginap di tempat saudara atau kenalan kamu. Lumayan buat ngirit biaya nginap sama makan. Selain itu, kalau kamu ingin mengunjungi objek wisata, cari yang banyak diskonnya.</p>
-   	 <li>Gak usah pake tur guide</li>
-		 <p class="TipsWisata">Sekarang ini zamannya internet. Jadi gak usah pakai tur guide kalau berkunjung ke objek wisata. Cukup buka dan cari tahu lewat mbah Google tentang cerita, sejarah atau spot-spot menarik di tempat objek wisata yang kamu kunjungi. Kadang informasi yang kita dapat dari internet, lebih banyak ngasih info menarik dibandingkan keterangan dari tour guide atau pemandu wisata yang begitu-begitu aja. Udah gitu, gratis pula.</p>
-   	 <li>Pilih tanggal yang low season</li>
-		 <p class="TipsWisata">Jangan jalan-jalan di saat musim liburan. Kalau bisa hindari dan pilih tanggal yang low season. Soalnya kalau pas musim liburan, harga semua tiket dan akomodasi akan lebih mahal daripada hari biasanya. Selain itu, tempat-tempat wisata juga pasti jadi ramai. Bahkan saat musim liburan tingkat kriminalitas juga meningkat.</p>
-  	  <li>Menginap di hostel, bukan hotel ya</li>
-			<p class="TipsWisata">Buat kantong mahasiswa, tentunya menginap di hostel jauh lebih murah dan seru daripada menginap di hotel. Saat ini sudah banyak hostel murah dan nyaman bertebaran di mana-mana, kok. Kamu bisa browsing untuk cari hostel yang sesuai keinginan kamu. Setiap hostel punya fasilitas dan hiburan masing-masing </p>
-  	  <li>Gak usah beli, kalau bisa pinjam aja</li>
-			<p class="TipsWisata">Biasanya kalau mau traveling, kita perlu menyiapkan perlengkapan. Terutama kalau perjalanannya bersifat petualangan di alam bebas seperti hiking dan diving. Atau pergi ketemuan sama calon mertua, itu termasuk perjalanan menantang juga lho.</p>
-  	  <li>Gunakan transportai publik</li>
-			<p class="TipsWisata">Untuk jalan-jalan di kota tujuan wisata kamu, usahakan naik transportasi publik ketimbang naik taksi yang biayanya lebih mahal. Kalau bisa cari tebengan (Tumpangan).</p>
-   	 <li>Bawa perbekalan dari rumah</li>
-		 <p class="TipsWisata">Jangan lupa bawa ransum sebagai bekal selama perjalanan. Siapa tahu kamu lapar di tengah jalan. Daripada beli kan mahal. Kamu bisa mengurangi budget untuk beli makanan. Pilih makanan perbekalan yang bersifat tahan lama, seperti mie instan cup, roti, keripik kentang, atau lainnya.</p>
-   	 <li>Cari kerja part time</li>
-		 <p class="TipsWisata">Budget yang pas-pasan membuatmu tidak bisa menjelajahi banyak tempat wisata. Cari kerja part time saja selama kamu liburan. Misalnya, kamu mau liburan ke Bali, cari info-info kerja part time di sana. Biasanya di hotel atau restoran banyak info kerja part time. Lumayan kan bisa berlibur sambil cari duit juga.</p>
-   	 <li>Beli oleh-oleh jangan di toko, di pasar aja</li>
-		 <p class="TipsWisata">Suvenir atau oleh-oleh yang dijual di pasar jelas jauh lebih murah dibandingkan di toko, dan bisa ditawar pula. Eits, tapi kamu harus pandai menawar dan jeli memilih agar tidak dapat barang yang jelek. Namun, gak semua pasar lokal itu murah, lho.
-</p>
-	</ol>
-</div>
-<center><img class="garis" src="Index gambar dan css/garis.png"></center>
-	<h4 class="disarankan">Disarankan untuk Anda</h4>
-	<div class="saran">
-		<img class="saran1" src="Index gambar dan css/Suggest 1.png"></img>
-				<p class="textsaran1Tipswisata">4 Hal di Banyuwangi yang Membuat Liburanmu Tidak Terlupakan</p>
-					<img class="saran2" src="Index gambar dan css/Suggest 2.png"></img>
-				<p class="textsaran2Tipswisata">Telemung: Tempat Di mana Warisan ada di Banyuwangi</p>
-			<img class="saran3" src="Index gambar dan css/Suggest 3.png"></img>
-		<p class="textsaran3Tipswisata">7 Pantai Tersembunyi di Banyuwangi yang Akan Membuatmu Berkesan</p>
-	</div>
-	<a href="tambahwisata.html"><input class="tambahwisata"type="button"name=""value="+ARTIKEL"></a>
-	<div class="footertop">
-	</div>
-	<div class="bottomnav">
-		<div class="footerkanan">
-			<a class="facebook" href="https://www.facebook.com/" target="_blank" rel="nofollow" title="Facebook"><img class="facebook" src="Index gambar dan css/Group 26.png" width="50" height="50"></a>
-			<a class="twitter" href="https://twitter.com/" target="_blank" rel="nofollow" title="Twitter"><img class="twitter" src="Index gambar dan css/Group 27.png" width="50" height="50"></a>
-			<a class="instagram" href="https://instagram.com/" target="_blank" rel="nofollow" title="Instagram"><img class="instagram" src="Index gambar dan css/Group 28.png" width="50" height="50"></a>
-		</div>
-	</div>
-</body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>KOTA OSING - The Sunrise of Java</title>
+    <link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
+    <link rel="stylesheet" href="Index gambar dan css/index.css">
+  </head>
+  <body>
+    <!-- navbar -->
+    <div class="topnav">
+        <a href="index.html">KOTA OSING</a>
+        <a style="float:right" href="#">Tentang</a>
+        <a style="float:right" href="#">Daftar</a>
+        <a style="float:right" href="form.html">Masuk</a>
+
+        <div class="search-container">
+          <form action="/more.html">
+          <input type="text" placeholder="Search.." name="search">
+          </form>
+          </div>
+    </div>
+
+
+    <!-- end navbar -->
+
+        <section id="artikel">
+          <div class="artikel">
+            <img src="Index gambar dan css/Blog 3.jpg">
+            <h1>7 Tips Liburan Hemat dan Menyenangkan</h1>
+            <p>Oleh Kota Osing diterbitkan 12 September di Blog</p>
+          </div>
+          <ol class="Ijen1">
+   	          <li>Budgeting</li>
+		            <p class="Ijen">Hal pertama yang perlu dilakukan adalah budgeting, yang terpenting adalah Anda harus mengatur keuangan. Dengan menentukan budget pengeluaran untuk berlibur, Anda akan lebih terarah dalam merencanakan suatu perjalanan. Jadi mulailah memeriksa, mengatur pemasukan dan pengeluaran sehari-hari, sehingga Anda bisa menabung untuk rencana liburan impian. </p>
+   	          <li>Pesan Tiket dari Jauh Hari Pesan Tiket dari Jauh Hari </li>
+		            <p class="Ijen">Melakukan pemesanan tiket sedari jauh hari sebelum keberangkatan tentunya akan membuat biaya liburan lebih hemat. Semakin jauh jarak pembelian dengan tanggal yang diinginkan, maka semakin murah pula harga yang ditawarkan.</p>
+   	          <li>Pilihlah Tanggal yang Tepat</li>
+		            <p class="Ijen">Tips lainnya adalah sebaiknya hindari peak season, karena musim tersebut biasanya destinasi wisata akan dipenuhi oleh pengunjung lainnya. Sebaliknya, saat low season biasanya pengunjung yang datang ke tempat wisata lebih sedikit. Keuntungannya Anda bisa menikmati lebih leluasa destinasi tersebut, serta dapat mengeksplor destinasi wisata tanpa gangguan keramaian. </p>
+  	          <li>Gunakan Promo </li>
+			          <p class="Ijen">Anda sebaiknya mencari berbagai promo diskon atau cashback. Di musim liburan terutama saat jelang akhir tahun seperti ini, banyak sekali penawaran promo tiket dan hotel, atraksi, hingga aktivitas liburan.  </p>
+  	          <li>Siasati Penggunaan Transportasi Liburan dengan kereta api </li>
+			          <p class="Ijen">Riset soal destinasi tentunya begitu penting, terutama soal transportasi apa yang bisa digunakan ke destinasi yang dituju maupun ketika sudah berada di sana. Misal, bila Anda bepergian ke destinasi di Pulau Jawa dengan keberangkatan dari Jakarta. Anda tak harus selalu mematok harus menggunakan pesawat, tetapi juga bisa menggunakan trasnportasi lain seperti kereta atau bus. Lalu Anda ketika sudah sampai di destinasi yang dituju, bila bepergian dalam grup, maka bisa urunan biaya untuk sewa mobil agar lebih fleksibel kala mengunjungi berbagai obyek wisata. </p>
+  	          <li>Cari Rekomendasi Makanan Murah Ragam kuliner street food yang dijual di night market</li>
+			          <p class="Ijen">Tak hanya mencari obyek wisata, Anda juga harus mencicipi kuliner khas di destinasi yang dituju. Maka dari itu sebaiknya Anda mencari rekomendasi berbagai kuliner yang murah melalui ulasan-ulasan yang ada di berbagai sumber. </p>
+   	          <li>Gunakan Fitur "Pay Later" Untuk para pengguna Traveloka</li>
+		            <p class="Ijen">salah satu yang bisa dimanfaatkan kala rencanakan liburan adalah fitur cicilan perjalanan yang tersedia seperti Traveloka PayLater. Melalui fitur ini Anda dapat melakukan perjalanan dengan melakukan pembayaran secara fleksibel di kemudian hari, untuk jangka waktu 1 hingga 12 bulan dengan bunga yang ringan.</p>
+	         </ol>
+        </section>
+        <p class="saran">Disarankan untuk anda</p>
+        <section id="saranwisata">
+          <div class="saran-card">
+            <img class="saran"src="Index gambar dan css/Suggest 1.png" alt="">
+            <p>4 Hal di Banyuwangi yang Membuat Liburanmu Tidak Terlupaka</p>
+          </div>
+          <div class="saran-card">
+            <img class="saran" src="Index gambar dan css/Suggest 2.png" alt="">
+            <p>Telemung: Tempat Di mana Warisan ada di Banyuwangi</p>
+          </div>
+          <div class="saran-card">
+            <img class="saran" src="Index gambar dan css/Suggest 3.png" alt="">
+            <p>7 Pantai Tersembunyi di Banyuwangi yang Akan Membuatmu Berkesan</p>
+          </div>
+        <a href="tambahwisata.html"><input class="tambahwisata"type="button"name=""value="+ARTIKEL"></a>
+      	</section>
+        <footer>
+          &#169; Kota Osing 2019
+        </footer>
+  </body>
 </html>
