--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <!-- navbar -->
     <div class="topnav">
         <a href="index.html">KOTA OSING</a>
-        <a style="float:right" href="#">Tentang</a>
-        <a style="float:right" href="#">Daftar</a>
-        <a style="float:right" href="#">Masuk</a>
+        <a style="float:right" href="tentang.html">Tentang</a>
+        <a style="float:right" href="register.html">Daftar</a>
+        <a style="float:right" href="login.html">Masuk</a>
 
         <div class="search-container">
           <form action="/more.html">
@@ -44,11 +44,11 @@
           <h3>Bangsring</h3>
         </div>
         <div class="blog-card">
-          <a href="Bangsring-Water.html"><img src="Index gambar dan css/Ijen.jpg" alt=""></a>
+          <a href="Kawah-Ijen.html"><img src="Index gambar dan css/Ijen.jpg" alt=""></a>
           <h3>Ijen</h3>
         </div>
         <div class="blog-card">
-          <a href="Kawah-Ijen.html"><img src="Index gambar dan css/Pulau Merah.jpg" alt=""></a>
+          <a href="Pulau-Merah.html"><img src="Index gambar dan css/Pulau Merah.jpg" alt=""></a>
           <h3>Pulau Merah</h3>
         </div>
         <div class="blog-card">
@@ -64,7 +64,7 @@
 
     <section id="paket">
   		<div class="paket-card">
-        <img class="box"src="Index gambar dan css/car.png" alt="">
+        <img class="box" src="Index gambar dan css/car.png" alt="">
   			<h1>Perjalanan</h1>
   			<p>Sangat mudah untuk mencapai tempat wisata</p>
   		</div>
@@ -88,7 +88,7 @@
 
     <section id="saran">
   		<div class="saran-card">
-        <a href="Asal-Usul Banyuwangi.html"><img class="saran"src="Index gambar dan css/Blog 1.jpg" alt=""></a>
+        <a href="Asal-Usul Banyuwangi.html"><img class="saran" src="Index gambar dan css/Blog 1.jpg" alt=""></a>
   			<h1>Asal-usul Kota Banyuwangi</h1>
   			<p>11 September 2019</p>
   		</div>
