--- a/tentang.html
+++ b/tentang.html
@@ -3,21 +3,23 @@
 <head>
 <title>KOTA OSING - The Sunrise of Java</title>
 <link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
-<link rel="stylesheet" href="Index gambar dan css/style.css">
+<link rel="stylesheet" href="Index gambar dan css/index.css">
 </head>
 <body>
-	<div id="header-menu">
-			<img src="Index gambar dan css/Kota Osing-black.png">
-			<ul>
-				<li><a href="index.html#boxgaris">KONTAK</a></li>
-				<li><a href="index.html#artikel">BLOG</a></li>
-				<li><a href="tentang.html">TENTANG</a></li>
-				<li><a href="index.html">BERANDA</a></li>
-			</ul>
+	<!-- navbar -->
+	<div class="topnav">
+			<a href="index.html">KOTA OSING</a>
+			<a style="float:right" href="tentang.html">Tentang</a>
+			<a style="float:right" href="register.html">Daftar</a>
+			<a style="float:right" href="login.html">Masuk</a>
+
+			<div class="search-container">
+				<form action="/more.html">
+				<input type="text" placeholder="Search.." name="search">
+				</form>
+			</div>
 	</div>
-
-
-	<center><h3 class="tentang"><b>Tentang Web Kami</b></h3></center>
+	<!-- end navbar -->
 
   <div class="profil-maya">
       <img src="Index gambar dan css/profil.jpg" width="105" height="105">
@@ -37,5 +39,9 @@
       <p>182410101001</p>
   </div>
 
+	<footer>
+		&#169; Kota Osing 2019
+	</footer>
+	
   </body>
 </html>
