--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>KOTA OSING - The Sunrise of Java</title>
     <link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
     <link rel="stylesheet" href="Index gambar dan css/index.css">
@@ -16,7 +18,7 @@
 
         <div class="search-container">
           <form action="/more.html">
-          <input type="text" placeholder="Search.." name="search">
+              <input type="text" placeholder="Search.." name="search">
           </form>
         </div>
     </div>
@@ -103,7 +105,6 @@
         <p>11 September 2019</p>
       </div>
   	</section>
-
     <footer>
       &#169; Kota Osing 2019
   	</footer>
