--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
   <body>
     <center><h1>KOTA OSING</h1></center>
     <div class="register"
-      <form action="" method="post" name="register" onsubmit="return validasi()">
+      <form action="" method="post" name="register">
         <input type="text" id="firstname" name="firstname" placeholder="Nama Depan"  required autocomplete="off"/>
         <input type="text" id="lastname" name="lastname" placeholder="Nama Belakang"  required autocomplete="off"/>
         <br><br>
@@ -24,7 +24,7 @@
         <input type="checkbox" name="ingatsaya">Ingat Saya
         <div class="registlogin">Sudah punya akun? <a href="login.html">Masuk</a></diV>
         <br>
-        <a href="index.html"><button type="submit" name="submit">DAFTAR</button></a>
+        <button type="submit" name="submit">DAFTAR</button>
       </form>
     </div>
     <ol type="none" id="validation">
