--- a/Asal-usul Banyuwangi.html
+++ b/Asal-usul Banyuwangi.html
@@ -48,9 +48,43 @@
             <img class="saran" src="Index gambar dan css/Suggest 3.png" alt="">
             <p>7 Pantai Tersembunyi di Banyuwangi yang Akan Membuatmu Berkesan</p>
           </div>
-        <a href="tambahwisata.html"><input class="tambahwisata"type="button"name=""value="+ARTIKEL"></a>
       	</section>
-        <footer>
+        <!-- Trigger/Open The Modal -->
+         <button id="tambahwisata">+ARTIKEL</button>
+         <!-- The Modal -->
+         <div id="myModal" class="modal">
+
+           <!-- Modal content -->
+           <div class="modal-content">
+             <span class="close">&times;</span>
+             <p>Silahkan Login terlebih dahulu!</p>
+           </div>
+         </div>
+       </div>
+     </div>
+     <script>
+     // Get the modal
+     var modal = document.getElementById("myModal");
+     // Get the button that opens the modal
+     var btn = document.getElementById("tambahwisata");
+     // Get the <span> element that closes the modal
+     var span = document.getElementsByClassName("close")[0];
+     // When the user clicks the button, open the modal
+     btn.onclick = function() {
+       modal.style.display = "block";
+     }
+     // When the user clicks on <span> (x), close the modal
+     span.onclick = function() {
+       modal.style.display = "none";
+     }
+     // When the user clicks anywhere outside of the modal, close it
+     window.onclick = function(event) {
+       if (event.target == modal) {
+         modal.style.display = "none";
+       }
+     }
+ </script>
+        <footer class="asalusul">
           &#169; Kota Osing 2019
         </footer>
   </body>
