--- a/tentang.html
+++ b/tentang.html
@@ -5,7 +5,7 @@
 <link rel="icon" type="image/png" href="Index gambar dan css/Udeng-black.png">
 <link rel="stylesheet" href="Index gambar dan css/index.css">
 </head>
-<body>
+<body class="tentang">
 	<!-- navbar -->
 	<div class="topnav">
 			<a href="index.html">KOTA OSING</a>
@@ -21,27 +21,24 @@
 	</div>
 	<!-- end navbar -->
 
-  <div class="profil-maya">
-      <img src="Index gambar dan css/profil.jpg" width="105" height="105">
-      <h4>Dewi Chantika Maya</h4>
-      <p>182410101049</p>
-  </div>
+	<div class="content-tentang">
+      <h2 class="tentang">INFORMASI KONTAK</h2>
+      <h1 class="tentang">KOTA OSING</h1>
+      <img class="tentang-lokasi" src="Index gambar dan css/Location.png" alt="" title="Kunjungi tempat kami">
+      <p class="tentang-lokasi">JL.Kalimantan No.125, Sumbersari</p>
+      <p class="tentang-lokasi">Kabupaten Jember 68121</p>
+      <p class="tentang-lokasi">Jawa Timur, Indonesia</p>
+      <img class="tentang" src="Index gambar dan css/Phone.png" alt="" title="Hubungi kontak kami">
+      <p class="tentang">085234156743</p>
+      <img class="tentang" src="Index gambar dan css/facebook-logo.png" alt="" title="Kunjungi Kami lewat Facebook">
+      <a class="tentang" href="#"><p class="tentang">Kota Osing Official Facebook</p></a>
+      <img class="tentang" src="Index gambar dan css/Gmail.png" alt="" title="Kunjugi kami lewat E-mail">
+      <a class="tentang" href="#"><p class="tentang">kotaosing@gmail.com</p></a>
+    </div>
 
-  <div class="profil-fitria">
-      <img src="Index gambar dan css/profil.jpg" width="105" height="105">
-      <h4>Fitria Rahmawati</h4>
-      <p>182410101030</p>
-  </div>
-
-  <div class="profil-dandy">
-      <img src="Index gambar dan css/profil.jpg" width="105" height="105">
-      <h4>Dandy Satrio Wibowo</h4>
-      <p>182410101001</p>
-  </div>
-
-	<footer>
+	<footer class="tentang">
 		&#169; Kota Osing 2019
 	</footer>
-	
+
   </body>
 </html>
