--- a/TipsWisata.html
+++ b/TipsWisata.html
@@ -63,7 +63,7 @@
             <img class="saran" src="Index gambar dan css/Suggest 3.png" alt="">
             <p>7 Pantai Tersembunyi di Banyuwangi yang Akan Membuatmu Berkesan</p>
           </div>
-        <a href="tambahwisata.html"><input class="tambahwisata"type="button"name=""value="+ARTIKEL"></a>
+        <a href="tambahwisata.html"><input id="tambahwisata"type="button"name=""value="+ARTIKEL"></a>
       	</section>
         <footer>
           &#169; Kota Osing 2019
