--- a/Asal-usul Banyuwangi.html
+++ b/Asal-usul Banyuwangi.html
@@ -57,7 +57,7 @@
            <!-- Modal content -->
            <div class="modal-content">
              <span class="close">&times;</span>
-             <p>Silahkan Login terlebih dahulu!</p>
+             <div class="login-modal">Silahkan <a href="login.html">Login</a> terlebih dahulu!</div>
            </div>
          </div>
        </div>
