--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <section id="saran">
   		<div class="saran-card">
-        <a href="Asal-Usul Banyuwangi.html"><img class="saran" src="Index gambar dan css/Blog 1.jpg" alt=""></a>
+        <a href="Asal-usul Banyuwangi.html"><img class="saran" src="Index gambar dan css/Blog 1.jpg" alt=""></a>
   			<h1>Asal-usul Kota Banyuwangi</h1>
   			<p>11 September 2019</p>
   		</div>
